refactor: 사용하지 않는 메서드 정리, 표기변경, 변수 이름 변경